responsive siêu siêu

--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
             <div class="header-scroll">
                 <div class="header-wrapped full-width">
                     <div class="mobile-menu">
-                        <a href="#" class="mobile-menu-link">
+                        <div class="mobile-menu-link">
                             <i class="fa-solid fa-bars"></i> MENU
-                        </a>
+                            <ul class="mobile-menu-list">
+                                <li class="mobile-menu-item"><a href="./index.html" class="mobile-menu-item-link">Trang chủ</a></li>
+                                <li class="mobile-menu-item"><a href="./tuyensinh.html" class="mobile-menu-item-link">Tuyển sinh</a></li>
+                                <li class="mobile-menu-item"><a href="./chuongtrinhhoc.html" class="mobile-menu-item-link">Chương trình học</a></li>
+                                <li class="mobile-menu-item"><a href="./tintuc.html" class="mobile-menu-item-link">Tin tức</a></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="header-logo">
                         <a href="#" class="header-logo-link">
@@ -54,7 +60,13 @@
                 </div>   
             </div>
             <div class="header-tobottom">
-                <a href="#content"><i class=" header-tobottom-icon fa-solid fa-angles-down"></i></a>
+                <a href="#content">
+                    <div class="arrow">
+                        <span></span>
+                        <span></span>
+                        <span></span> 
+                    </div>
+                </a>
             </div>
         </div>
     
