--- a/tuyensinh.html
+++ b/tuyensinh.html
@@ -20,24 +20,29 @@
 <body>
     <header>
         <div class="header-scroll">
-            <div class="header-top-wrapper flex">
-                <div class="header-left flex">
+            <div class="header-top-wrapper flex"> 
+                <a href="./index.html" class="header-left flex">
                     <div class="header-logo">
                         <img src="./assets/img/logo/logo.png" alt="">
                     </div>
                     <div class="header-name">
                          <h2 class="header-name-1">ISHCMC</h2>
                          <span class="header-name-2">Trường Quốc Tế Sài Gòn</span>
-                    </div>
-                </div>
-        
+                    </div>  
+                </a> 
                 <div class="header-right flex">
                     <div class="header-right-resg js-btn-signup">
                         <a href="#modal">Đăng kí tư vấn</a>
                     </div>
-                    <span class="header-right-menu">
+                    <div class="header-right-menu mobile-menu-link">
                         <i class="fa-solid fa-bars"></i>
-                    </span>
+                        <ul class="mobile-menu-list">
+                            <li class="mobile-menu-item"><a href="./index.html" class="mobile-menu-item-link">Trang chủ</a></li>
+                            <li class="mobile-menu-item"><a href="./tuyensinh.html" class="mobile-menu-item-link">Tuyển sinh</a></li>
+                            <li class="mobile-menu-item"><a href="./chuongtrinhhoc.html" class="mobile-menu-item-link">Chương trình học</a></li>
+                            <li class="mobile-menu-item"><a href="./tintuc.html" class="mobile-menu-item-link">Tin tức</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,107 +81,119 @@
             </div>
         </div>
         <div class="experience-list">
-            <div class="experience-item">
-                <div class="experience-item-content">
-                    <div class="experience-item-img">
-                        <img src="./assets/img/tuyensinh/ex-item/ex-2.jpg" alt="">
+            <div class="exprecience-item-wrapper">
+                <div class="experience-item">
+                    <div class="experience-item-content">
+                        <div class="experience-item-img">
+                            <img src="./assets/img/tuyensinh/ex-item/ex-2.jpg" alt="">
+                        </div>
+                        <div class="experience-item-title">
+                            ĐỘI NGŨ GIÁO VIÊN HÀNG ĐẦU
+                        </div>
+                        <div class="experience-item-desc">
+                            Giáo viên hàng đầu tạo nên ngôi trường đẳng cấp. Đó là lý do ISHCMC tâm huyết tuyển dụng những nhà giáo giỏi và nhiệt huyết, nhằm đảm bảo học sinh học tập và đạt được nhiều thành công hơn mong đợi.
+                        </div>
                     </div>
-                    <div class="experience-item-title">
-                        ĐỘI NGŨ GIÁO VIÊN HÀNG ĐẦU
-                    </div>
-                    <div class="experience-item-desc">
-                        Giáo viên hàng đầu tạo nên ngôi trường đẳng cấp. Đó là lý do ISHCMC tâm huyết tuyển dụng những nhà giáo giỏi và nhiệt huyết, nhằm đảm bảo học sinh học tập và đạt được nhiều thành công hơn mong đợi.
-                    </div>
+                    <a href="" class="experience-item-more">
+                        <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
+                        <span class="experience-item-more-text">Tìm hiểu thêm</span>
+                    </a>
                 </div>
-                <a href="" class="experience-item-more">
-                    <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
-                    <span class="experience-item-more-text">Tìm hiểu thêm</span>
-                </a>
             </div>
-            <div class="experience-item">
-                <div class="experience-item-content">
-                    <div class="experience-item-img">
-                        <img src="./assets/img/tuyensinh/ex-item/ex-3.jpg" alt="">
+            <div class="exprecience-item-wrapper">
+                <div class="experience-item">
+                    <div class="experience-item-content">
+                        <div class="experience-item-img">
+                            <img src="./assets/img/tuyensinh/ex-item/ex-3.jpg" alt="">
+                        </div>
+                        <div class="experience-item-title">
+                            MÔI TRƯỜNG HỌC HIỆN ĐẠI 
+                        </div>
+                        <div class="experience-item-desc">
+                            Đội ngũ giáo viên khơi dậy trí tưởng tượng của học sinh trong môi trường đầy sáng tạo kết hợp sử dụng những công nghệ mới nhất.
+                        </div>
                     </div>
-                    <div class="experience-item-title">
-                        MÔI TRƯỜNG HỌC HIỆN ĐẠI 
-                    </div>
-                    <div class="experience-item-desc">
-                        Đội ngũ giáo viên khơi dậy trí tưởng tượng của học sinh trong môi trường đầy sáng tạo kết hợp sử dụng những công nghệ mới nhất.
-                    </div>
+                    <a href="" class="experience-item-more">
+                        <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
+                        <span class="experience-item-more-text">Tìm hiểu thêm</span>
+                    </a>
                 </div>
-                <a href="" class="experience-item-more">
-                    <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
-                    <span class="experience-item-more-text">Tìm hiểu thêm</span>
-                </a>
             </div>
-            <div class="experience-item">
-                <div class="experience-item-content">
-                    <div class="experience-item-img">
-                        <img src="./assets/img/tuyensinh/ex-item/ex-4.jpg" alt="">
+            <div class="exprecience-item-wrapper">
+                <div class="experience-item">
+                    <div class="experience-item-content">
+                        <div class="experience-item-img">
+                            <img src="./assets/img/tuyensinh/ex-item/ex-4.jpg" alt="">
+                        </div>
+                        <div class="experience-item-title">
+                            TRẢI NGHIỆM HỌC TẬP VƯỢT TRỘI
+                        </div>
+                        <div class="experience-item-desc">
+                            Tại ISHCMC, học tập không chỉ diễn ra trong phạm vi lớp học. Học sinh được trao cơ hội phát triển sự tự tin, tinh thần đồng đội và tính bền bỉ trong những trải nghiệm quy mô quốc tế.
+                        </div>
                     </div>
-                    <div class="experience-item-title">
-                        TRẢI NGHIỆM HỌC TẬP VƯỢT TRỘI
-                    </div>
-                    <div class="experience-item-desc">
-                        Tại ISHCMC, học tập không chỉ diễn ra trong phạm vi lớp học. Học sinh được trao cơ hội phát triển sự tự tin, tinh thần đồng đội và tính bền bỉ trong những trải nghiệm quy mô quốc tế.
-                    </div>
+                    <a href="" class="experience-item-more">
+                        <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
+                        <span class="experience-item-more-text">Tìm hiểu thêm</span>
+                    </a>
                 </div>
-                <a href="" class="experience-item-more">
-                    <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
-                    <span class="experience-item-more-text">Tìm hiểu thêm</span>
-                </a>
             </div>
-            <div class="experience-item">
-                <div class="experience-item-content">
-                    <div class="experience-item-img">
-                        <img src="./assets/img/tuyensinh/ex-item/ex-5.jpg" alt="">
+            <div class="exprecience-item-wrapper">
+                <div class="experience-item">
+                    <div class="experience-item-content">
+                        <div class="experience-item-img">
+                            <img src="./assets/img/tuyensinh/ex-item/ex-5.jpg" alt="">
+                        </div>
+                        <div class="experience-item-title">
+                            TỔ CHỨC GIÁO DỤC NORD ANGLIA 
+                        </div>
+                        <div class="experience-item-desc">
+                            Học tập tại trường thành viên thuộc Tổ chức Giáo dục Nord Anglia, quý gia đình đồng thời tham gia vào một cộng đồng năng động cùng nhiều học sinh, phụ huynh và cựu học sinh trên toàn cầu mở ra một thế giới mới với vô vàn kết nối và cơ hội.
+                        </div>
                     </div>
-                    <div class="experience-item-title">
-                        TỔ CHỨC GIÁO DỤC NORD ANGLIA 
-                    </div>
-                    <div class="experience-item-desc">
-                        Học tập tại trường thành viên thuộc Tổ chức Giáo dục Nord Anglia, quý gia đình đồng thời tham gia vào một cộng đồng năng động cùng nhiều học sinh, phụ huynh và cựu học sinh trên toàn cầu mở ra một thế giới mới với vô vàn kết nối và cơ hội.
-                    </div>
+                    <a href="" class="experience-item-more">
+                        <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
+                        <span class="experience-item-more-text">Tìm hiểu thêm</span>
+                    </a>
                 </div>
-                <a href="" class="experience-item-more">
-                    <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
-                    <span class="experience-item-more-text">Tìm hiểu thêm</span>
-                </a>
             </div>
-            <div class="experience-item">
-                <div class="experience-item-content">
-                    <div class="experience-item-img">
-                        <img src="./assets/img/tuyensinh/ex-item/ex-6.jpg" alt="">
+            <div class="exprecience-item-wrapper">
+                <div class="experience-item">
+                    <div class="experience-item-content">
+                        <div class="experience-item-img">
+                            <img src="./assets/img/tuyensinh/ex-item/ex-6.jpg" alt="">
+                        </div>
+                        <div class="experience-item-title">
+                            MỤC TIÊU XÃ HỘI TẠI ISHCMC 
+                        </div>
+                        <div class="experience-item-desc">
+                            Nhà trường giáo dục học sinh tạo nên sự khác biệt tích cực cho thế giới mà các em đang sống nhờ việc phát huy thế mạnh và tài năng của bản thân.
+                        </div>
                     </div>
-                    <div class="experience-item-title">
-                        MỤC TIÊU XÃ HỘI TẠI ISHCMC 
-                    </div>
-                    <div class="experience-item-desc">
-                        Nhà trường giáo dục học sinh tạo nên sự khác biệt tích cực cho thế giới mà các em đang sống nhờ việc phát huy thế mạnh và tài năng của bản thân.
-                    </div>
+                    <a href="" class="experience-item-more">
+                        <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
+                        <span class="experience-item-more-text">Tìm hiểu thêm</span>
+                    </a>
                 </div>
-                <a href="" class="experience-item-more">
-                    <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
-                    <span class="experience-item-more-text">Tìm hiểu thêm</span>
-                </a>
             </div>
-            <div class="experience-item">
-                <div class="experience-item-content">
-                    <div class="experience-item-img">
-                        <img src="./assets/img/tuyensinh/ex-item/ex-1.jpg" alt="">
+            <div class="exprecience-item-wrapper">
+                <div class="experience-item">
+                    <div class="experience-item-content">
+                        <div class="experience-item-img">
+                            <img src="./assets/img/tuyensinh/ex-item/ex-1.jpg" alt="">
+                        </div>
+                        <div class="experience-item-title">
+                            CHẤT LƯỢNG GIẢNG DẠY ƯU VIỆT
+                        </div>
+                        <div class="experience-item-desc">
+                            Phương pháp học tập được cá nhân hóa cao tại ISHCMC giúp học sinh đạt được các kết quả ấn tượng. Từ đó tự tin chinh phục các trường đại học hàng đầu thế giới.
+                        </div>
                     </div>
-                    <div class="experience-item-title">
-                        CHẤT LƯỢNG GIẢNG DẠY ƯU VIỆT
-                    </div>
-                    <div class="experience-item-desc">
-                        Phương pháp học tập được cá nhân hóa cao tại ISHCMC giúp học sinh đạt được các kết quả ấn tượng. Từ đó tự tin chinh phục các trường đại học hàng đầu thế giới.
-                    </div>
+                    <a href="" class="experience-item-more">
+                        <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
+                        <span class="experience-item-more-text">Tìm hiểu thêm</span>
+                    </a>
                 </div>
-                <a href="" class="experience-item-more">
-                    <span class="experience-item-more-icon"><i class="fa-solid fa-plus"></i></span>
-                    <span class="experience-item-more-text">Tìm hiểu thêm</span>
-                </a>
             </div>
         </div>
     </section>
@@ -455,6 +472,7 @@
         </div>
     </div>
 
+    <script src="./assets/js/trangchu.js"></script>
     <script src="./assets/js/tuyensinh.js"></script>
 </body>
 </html>
