--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <div class="header-logo">
-                        <a href="#" class="header-logo-link">
+                        <a href="./index.html" class="header-logo-link">
                             <img src="./assets/img/logo/logo-ngang.png" alt="" class="header-logo-img">
                         </a>
                     </div>
