--- a/tintuc.html
+++ b/tintuc.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <div class="header-img">
+        <div class="header-img-4">
             <img src="https://www.hw.com/portals/0/hero/hero73.jpg" alt="">
         </div>  
         <div class="header-nav">
